--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ body {
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
-.calculator input {
+.output {
   background: none;
   border: none;
   box-shadow: none;
@@ -24,9 +24,9 @@ body {
   width: 100%;
   background: transparent;
   border-bottom: 2px solid #efefef;
-  padding: 1.25rem;
+  padding: 1.20rem;
   text-align: right;
-  font-size: 2.5rem;
+  font-size: 1.7rem;
 }
 
 .calculator-buttons {
