--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,19 @@ body {
   background: #ffffff;
   padding-bottom: 30px;
   padding-top: 30px;
+  font: 13px/20px "Open Sans", Tahoma, Verdana, sans-serif;
+  color: #eeffee;
+  background-image: url(./img/c.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+}
+
+h3{
+  text-align: center;
+  font-size: 1.7rem;
+  font-weight: 600;
+  color: #ffffff;
 }
 
 .calculator {
@@ -14,6 +27,7 @@ body {
   border: 2px solid #eeeeee;
   border-radius: 5px;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+  margin-bottom: 7rem;
 }
 
 .output {
@@ -82,4 +96,5 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  color: #34b13e;
 }
